# dekunobou_bot

./: .gitmodules  Cargo.toml  build.rs
src/: dekunobou.rs  main.rs
