[package]
name = "dekunobou_bot"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false , features = ["stream","rustls-tls-webpki-roots"] } 
reqwest-websocket = "0.3.0"
futures-util = "0.3"
serde_json = "1.0"
serde = {version="^1.0",features=["derive"]}
rand = "0.8.5"

[build-dependencies]
cmake = "0.1.51"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
